<resources>
    <string name="app_name">Map Locator</string>
    <string name="signed_in_as">Signed in as: %s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_map_control">Map Control</string>
    <string name="action_map_normal">Normal</string>
    <string name="action_map_satellite">Satellite</string>
    <string name="action_map_night">Night</string>
    <string name="action_streetview_panorama">StreetView Panorama</string>
    <string name="action_cluster_marker">Cluster Marker</string>
    <string name="action_polygon">Polygons</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
</resources>
